--- a/sections/cstm-footer.liquid
+++ b/sections/cstm-footer.liquid
@@ -407,7 +407,7 @@
           <div class="imge-block">
             <img
               srcset="{{ section.settings.images | image_url: width: section.settings.images_width }}, {{ section.settings.images | image_url: width: image_size_2x }} 2x"
-              src="{{ section.settings.images | image_url: width: 760 }}"
+              src="{{ section.settings.images | image_url:width:760 }}"
               alt="{{ section.settings.images.alt | escape }}"
               loading="lazy"
               width="{{ block.settings.images.width }}"
@@ -464,12 +464,16 @@
                           <ul class="footer-block__details-content list-unstyled">
                             {%- for link in block.settings.menu.links -%}
                               <li>
-                                <a
-                                  href="{{ link.url }}"
-                                  class="link link--text list-menu__item list-menu__item--link{% if link.active %} list-menu__item--active{% endif %}"
-                                >
-                                  {{ link.title | escape }}
-                                </a>
+                                  {% if link.url != blank %}
+                                      {% assign safe_url = link.url | escape %}
+                                      <a
+                                              href="{{ safe_url }}"
+                                              class="link link--text list-menu__item list-menu__item--link{% if link.active %} list-menu__item--active{% endif %}"
+                                      >
+                                          {{ link.title | escape }}
+                                      </a>
+                                  {% endif %}
+
                               </li>
                             {%- endfor -%}
                           </ul>
