--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -3,15 +3,16 @@
 }
 
 .mega-menu__content {
-  background-color: rgb(var(--color-background));
   border-left: 0;
   border-radius: 0;
   border-right: 0;
   left: 0;
-  overflow-y: auto;
   position: absolute;
   right: 0;
-  top: 100%;
+  top: 0;
+  padding-top: var(--header-height);
+  z-index: 1;
+  background-color: transparent;
 }
 
 .shopify-section-header-sticky .mega-menu__content {
@@ -30,10 +31,17 @@
 .mega-menu[open] .mega-menu__content {
   opacity: 1;
   transform: translateY(0);
-  background: #000000b5;
-  height: 100vh;
 }
-
+.mega-menu[open] .mega-menu__content:before {
+  content: '';
+  left: 0;
+  position: absolute;
+  background: #000000b5;
+  top: var(--header-height);
+  height: calc(100vh - var(--header-height));
+  width: 100%;
+  z-index: -1;
+}
 .mega-menu__list {
   display: grid;
   list-style: none;
