--- a/assets/component-list-menu.css
+++ b/assets/component-list-menu.css
@@ -17,6 +17,7 @@
 }
 .header {
    border-bottom: 1px solid #d7d7d7;
+   min-height: 8rem;
 }
 .js .menu-drawer__menu li:not(:last-child) {
       border-bottom: 1px solid #d0d0d0;
