--- a/assets/base.css
+++ b/assets/base.css
@@ -323,13 +323,13 @@ a#togglePassword {
   z-index: 0;
 }
 
-.section + .section {
-  margin-top: var(--spacing-sections-mobile);
+#MainContent .shopify-section {
+  margin-bottom: var(--spacing-sections-mobile);
 }
 
 @media screen and (min-width: 768px) {
-  .section + .section {
-    margin-top: var(--spacing-sections-desktop);
+  #MainContent .shopify-section {
+    margin-bottom: var(--spacing-sections-desktop);
   }
 }
 
