--- a/sections/recommended-products.liquid
+++ b/sections/recommended-products.liquid
@@ -24,16 +24,6 @@
       "unit": "px",
       "label": "Tab Padding",
       "default": 40
-    },
-    {
-      "type": "range",
-      "id": "tab_margin",
-      "min": 0,
-      "max": 50,
-      "step": 1,
-      "unit": "px",
-      "label": "Tab Margin",
-      "default": 30
     }
   ],
   "blocks": [
@@ -59,7 +49,7 @@
 }
 {% endschema %}
 <recommended-product>
-    <div style="background-color: {{ section.settings.tab_background_color }}; padding-block: {{ section.settings.tab_padding }}px; margin-block: {{ section.settings.tab_margin }}px;">
+    <div style="background-color: {{ section.settings.tab_background_color }}; padding-block: {{ section.settings.tab_padding }}px;">
         <section class="recommended-section page-width">
             <div class="{% if section.blocks.size > 4 %}swiper{% else %}recommended-grid{% endif %}">
                 <h2 class="recommended-heading">{{ section.settings.heading }}</h2>
