mini banner height fixed

--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -126,7 +126,7 @@
 
         --badge-corner-radius: {{ settings.badge_corner_radius | divided_by: 10.0 }}rem;
 
-        --spacing-sections-desktop: {{ settings.spacing_sections }}px;
+        --spacing-sections-desktop: {{ settings.spacing_sections | default }}px;
         --spacing-sections-mobile: {% if settings.spacing_sections < 24 %}{{ settings.spacing_sections }}{% else %}{{ settings.spacing_sections | times: 0.7 | round | at_least: 20 }}{% endif %}px;
 
         --grid-desktop-vertical-spacing: {{ settings.spacing_grid_vertical }}px;
