--- a/assets/base.css
+++ b/assets/base.css
@@ -323,12 +323,12 @@ a#togglePassword {
   z-index: 0;
 }
 
-#MainContent .shopify-section {
+#MainContent .shopify-section.has-height {
   margin-bottom: var(--spacing-sections-mobile);
 }
 
 @media screen and (min-width: 768px) {
-  #MainContent .shopify-section {
+  #MainContent .shopify-section.has-height {
     margin-bottom: var(--spacing-sections-desktop);
   }
 }
