--- a/snippets/mini-banner.liquid
+++ b/snippets/mini-banner.liquid
@@ -54,6 +54,8 @@
     .mega-menu__list.page-width.min-banner-menu .mini-banner.mini-banner--with-image .mini-banner__image img {
       width: 100%;
       height: 100%;
+      max-height: 200px;
+      object-fit: cover;
     }
     .mega-menu__list.page-width.min-banner-menu .mega-menu-subcategory-list{
             border-right: none;
