Worked on colorful kick section

--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -323,8 +323,9 @@
   .product-image-wrapper .bg-text .middle-content {
     padding-left: 50%;
   }
-  .colorful-kicks-section .container .product-image-wrapper {
+  .colorful-kicks-section .container .product-image-wrapper .product-image-wrapper-img {
      display: flex;
+     cursor: pointer;
   }
   .colorful-kicks-section .container .product-image-wrapper img {
     position: relative;
