--- a/assets/base.css
+++ b/assets/base.css
@@ -4547,7 +4547,7 @@ details > summary {
   z-index: 2;
 }
 .mega-menu-bg {
-  background-color: #fff;
+  background-color: #FAFAFA;
   height : calc(100vh - 169px);
   overflow-y: auto;
 }
