Add DELIVERY OPTIONS Block

--- a/assets/base.css
+++ b/assets/base.css
@@ -1144,17 +1144,15 @@ summary::-webkit-details-marker {
   .grid--4-col-tablet .grid__item {
     width: calc(25% - var(--grid-desktop-horizontal-spacing) * 3 / 4);
   }
-
   .grid--3-col-tablet .grid__item {
     width: calc(33.33% - var(--grid-desktop-horizontal-spacing) * 2 / 3);
   }
 
-  .grid--2-col-tablet .grid__item {
-    width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
-  }
+
+
 }
 
-@media screen and (max-width: 989px) {
+@media screen and (max-width: 992px) {
 
   .slider--tablet.grid--peek {
     margin: 0 !important;
@@ -1185,6 +1183,18 @@ summary::-webkit-details-marker {
   }
 }
 @media screen and (min-width: 992px) {
+  .grid--2-col-tablet .grid__item {
+    width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
+  }
+  .grid--2-col-tablet .product__media-list .product__media-item.grid__item:first-child {
+    width: 100%;
+  }
+  .grid--2-col-tablet.product.product--large .grid__item.product__media-wrapper {
+    width: 59%;
+  }
+  .grid--2-col-tablet.product.product--large .grid__item.product__info-wrapper {
+    width: 41%;
+  }
   .grid--6-col-desktop .grid__item {
     width: calc(16.66% - var(--grid-desktop-horizontal-spacing) * 5 / 6);
     max-width: calc(16.66% - var(--grid-desktop-horizontal-spacing) * 5 / 6);
@@ -2846,7 +2856,7 @@ input[type="checkbox"] {
   display: flex;
   grid-area: icons;
   justify-self: end;
-  gap: 12px
+  gap: 8px
 }
 
 .header__icons .shopify-app-block {
@@ -3202,7 +3212,7 @@ details[open] > .header__menu-item .icon-caret {
   box-shadow: var(--popup-shadow-horizontal-offset)
     var(--popup-shadow-vertical-offset) var(--popup-shadow-blur-radius)
     rgba(var(--color-shadow), var(--popup-shadow-opacity));
-  z-index: -1;
+    z-index: -1;
 }
 
 .header__submenu.list-menu {
@@ -3277,10 +3287,10 @@ details-disclosure > details {
   border: 1px solid transparent;
   border-radius: var(--badge-corner-radius);
   display: inline-block;
-  font-size: 1.2rem;
+  font-size: 1rem;
   letter-spacing: 0.1rem;
   line-height: 1;
-  padding: 0.5rem 1.3rem 0.6rem 1.3rem;
+  padding: 0.4rem 1.3rem;
   text-align: center;
   background-color: rgb(var(--color-badge-background));
   border-color: rgba(var(--color-badge-border), var(--alpha-badge-border));
