--- a/assets/component-product-variant-picker.css
+++ b/assets/component-product-variant-picker.css
@@ -66,18 +66,20 @@ a.varient-plus-icon-svg {
   color: rgba(var(--color-foreground));
   border-radius: var(--variant-pills-radius);
   color: rgb(var(--color-foreground));
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   margin: 0.7rem 0.5rem 0.2rem 0;
-  padding: 1rem 2rem;
-  font-size: 1.4rem;
-  letter-spacing: 0.1rem;
+  padding: 0.5rem;
+  font-size: calc(14px + 6 * ((100vw - 360px) / (1920 - 360)));
   line-height: 1;
   text-align: center;
   transition: border var(--duration-short) ease;
   cursor: pointer;
   position: relative;
+  height: 40px;
+  width: 40px;
 }
-
 .product-form__input--pill input[type='radio'] + label:before {
   content: '';
   position: absolute;
@@ -119,9 +121,17 @@ a.varient-plus-icon-svg {
 .product-form__input--pill input[type='radio'].disabled + label {
   border-color: rgba(var(--color-foreground), 0.1);
   color: rgba(var(--color-foreground), 0.6);
-  text-decoration: line-through;
+  pointer-events: none;
 }
-
+.product-form__input--pill input[type='radio']:disabled + label:after,
+.product-form__input--pill input[type='radio'].disabled + label:after {
+  content: '';
+  background-color: #ff3200;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  transform: rotate(55deg);
+}
 /* .product-form__input--pill input[type='radio'].disabled:checked + label,
 .product-form__input--pill input[type='radio']:disabled:checked + label {
   color: rgba(var(--color-background), 0.6);
@@ -142,14 +152,12 @@ a.varient-plus-icon-svg {
 }
 
 .product-form__input--swatch .swatch-input__input + .swatch-input__label {
-  --swatch-input--size: 2rem;
-
-  margin: 0.7rem 1.2rem 0.2rem 0;
+  margin-right: 1.8rem;
 }
 
 @media screen and (min-width: 768px) {
   .product-form__input--swatch .swatch-input__input + .swatch-input__label {
-    --swatch-input--size: 2.8rem;
+    --swatch-input--size: 9rem;
   }
 }
 /* End custom styles for Swatch display type */
