worked on Icon with text Block

--- a/assets/base.css
+++ b/assets/base.css
@@ -1147,9 +1147,10 @@ summary::-webkit-details-marker {
   .grid--3-col-tablet .grid__item {
     width: calc(33.33% - var(--grid-desktop-horizontal-spacing) * 2 / 3);
   }
-
-
-
+  .grid--2-col-tablet.product.product--large .grid__item.product__media-wrapper,
+  .grid--2-col-tablet.product.product--large .grid__item.product__info-wrapper {
+    width: 50%;
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -1183,17 +1184,17 @@ summary::-webkit-details-marker {
   }
 }
 @media screen and (min-width: 992px) {
-  .grid--2-col-tablet .grid__item {
-    width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
-  }
-  .grid--2-col-tablet .product__media-list .product__media-item.grid__item:first-child {
-    width: 100%;
-  }
   .grid--2-col-tablet.product.product--large .grid__item.product__media-wrapper {
     width: 59%;
   }
   .grid--2-col-tablet.product.product--large .grid__item.product__info-wrapper {
     width: 41%;
+  }
+  .grid--2-col-tablet .grid__item {
+    width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
+  }
+  .grid--2-col-tablet .product__media-list .product__media-item.grid__item:first-child {
+    width: 100%;
   }
   .grid--6-col-desktop .grid__item {
     width: calc(16.66% - var(--grid-desktop-horizontal-spacing) * 5 / 6);
@@ -3536,7 +3537,6 @@ details-disclosure > details {
 
 .rte ul,
 .rte ol {
-  list-style-position: inside;
   padding-left: 2rem;
 }
 
