--- a/sections/product-detail.liquid
+++ b/sections/product-detail.liquid
@@ -42,8 +42,9 @@
     }
 
     .product-detail-image {
-    aspect-ratio: 1;
-    object-fit: content;
+        aspect-ratio: 1;
+        object-fit: contain;
+        width: 100%;
     }
 
     @media (min-width: 1024px) {
