--- a/snippets/cstm-buy-buttons.liquid
+++ b/snippets/cstm-buy-buttons.liquid
@@ -74,7 +74,7 @@
             id="ProductSubmitButton-{{ section_id }}"
             type="submit"
             name="add"
-            class="product-form__submit button button--full-width {% if show_dynamic_checkout %}button--secondary{% else %}button--primary{% endif %}"
+            class="product-form__submit button button--full-width {% if show_dynamic_checkout %}{% else %}button--primary{% endif %}"
             {% if product.selected_or_first_available_variant.available == false
               or quantity_rule_soldout
               or product.selected_or_first_available_variant == null
@@ -91,10 +91,13 @@
                 {{ 'products.product.add_to_cart' | t }}
               {%- endif -%}
             </span>
+  <span class="svg-wrapper">{{ 'add-to-bag.svg' | inline_asset_content }}</span>
             {%- render 'loading-spinner' -%}
           </button>
           {%- if show_dynamic_checkout -%}
+          <div class="button button--secondary">
             {{ form | payment_button }}
+            </div>
           {%- endif -%}
         </div>
       {%- endform -%}
